force-app/main/default/objects/analyticsadopt__DatasetSpecs__c/analyticsadopt__DatasetSpecs__c.object-meta.xml
<CustomObject>
    <label>DatasetSpecs</label>
    <nameField>
        <label>DatasetSpecs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DatasetSpecs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>