force-app/main/default/objects/analyticsadopt__DatasetSpecs__c/fields/analyticsadopt__Column_Label_Name__c.field-meta.xml
<CustomField>
    <fullName>analyticsadopt__Column_Label_Name__c</fullName>
    <description>Making it not required for now</description>
    <label>Column Label Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>