force-app/main/default/objects/analyticsadopt__DatasetSpecs__c/fields/analyticsadopt__Dataset_ID__c.field-meta.xml
<CustomField>
    <fullName>analyticsadopt__Dataset_ID__c</fullName>
    <label>Dataset ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>