force-app/main/default/objects/analyticsadopt__DatasetSpecs__c/fields/analyticsadopt__Dataset_Name__c.field-meta.xml
<CustomField>
    <fullName>analyticsadopt__Dataset_Name__c</fullName>
    <label>Dataset Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>