force-app/main/default/objects/analyticsadopt__DatasetSpecs__c/fields/analyticsadopt__Is_Cus_Act_Enabled__c.field-meta.xml
<CustomField>
    <fullName>analyticsadopt__Is_Cus_Act_Enabled__c</fullName>
    <label>Is Cus Act Enabled</label>
    <length>10</length>
    <type>Text</type>
</CustomField>