force-app/main/default/objects/analyticsadopt__DatasetSpecs__c/fields/analyticsadopt__Type__c.field-meta.xml
<CustomField>
    <fullName>analyticsadopt__Type__c</fullName>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>