force-app/main/default/objects/analyticsadopt__DatasetSpecs__c/listViews/analyticsadopt__All.listView-meta.xml
<ListView>
    <fullName>analyticsadopt__All</fullName>
    <columns>NAME</columns>
    <columns>analyticsadopt__Dataset_Name__c</columns>
    <columns>analyticsadopt__Type__c</columns>
    <columns>analyticsadopt__Column_API_Name__c</columns>
    <columns>analyticsadopt__Format__c</columns>
    <columns>analyticsadopt__Column_Label_Name__c</columns>
    <columns>analyticsadopt__Dataset_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>